kubernetes/002_simple-nginx_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: simple-nginx
spec:
  selector:
    app: simple-nginx
  ports:
    - port: 8080
